# Product_Fatigue

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: main.yml
docker/: Dockerfile.api  Dockerfile.frontend  Dockerfile.train  docker-compose.yml  nginx.conf  prometheus.yml  rebuild.sh  verify.sh
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/dashboard/: BranchComparisonChart.tsx  ConfidenceGauge.tsx  DriverTrendChart.tsx  FatigueTrajectoryChart.tsx  PrimaryMetric.tsx  SecondaryMetrics.tsx
frontend/src/components/layout/: MainStage.tsx  Sidebar.tsx  TopBar.tsx
notebooks/: 01_eda_reviews.ipynb  02_eda_sales.ipynb  03_eda_usage.ipynb  04_fatigue_integration.ipynb
pipelines/: dataset_reviews_pipeline.py  dataset_sales_pipeline.py  dataset_usage_pipeline.py  training_pipeline.py
src/: ablation.py  calibrate.py  data_loader.py  evaluate.py  experiment_log.py  feature_stability.py  forward_label.py  fusion.py  main.py  predict.py  scenario_benchmark.py  stress_test.py  text_embeddings.py  train.py  walk_forward.py
src/api/: main.py  schemas.py  v1.py  v2.py
tests/: test_pipeline.py  test_stress.py
